@@ -1,6 +1,17 @@
+2007-04-16  Trent Fisher  <trent@phaedrus.veganmilitia.org>
+
+	* test/xpath.html:
+	doesn't work in IE 6.02900.2180.xpsp_sp2_gdr.161219-0316
+	this line (in xml.js) causes an exception
+	return context.selectSingleNode(this.xpathText);
+	everything looks fine up until then.
+	nope, it appears that context is blank due to the previous if
+	doc.documentElement is null
+	My patience for IE has run out.
+
 2007-04-15  Trent Fisher  <trent@phaedrus.veganmilitia.org>
 
-	* test/xml.js: 
+	* js/util/xml.js: 
 	the problem seems to be that the xpath wrapper does not follow w3c
 	standards (because firefox is sloppy)
 	http://my.opera.com/hallvors/blog/show.dml/429702
